<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:fillViewport="false">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginBottom="170dp"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        tools:context=".MainActivity">

        <View
            android:id="@+id/header_view"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/header_bg">

        </View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center_horizontal"
            android:text="@string/mongome"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="40sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:gravity="center_horizontal"
            android:text="Order Reject"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_view"
            android:layout_marginTop="70dp"
            android:orientation="vertical">
            />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="13"
                    android:hint="Order ID : 01" />

                <Spinner
                    android:id="@+id/reason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="64dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginRight="248px"
                    android:ems="13"
                    android:entries="@array/reason_order_reject_arrays"
                    android:prompt="@string/ReasonOrderReject_prompt" />

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginLeft="72dp"
                    android:layout_marginRight="75dp"
                    android:gravity="top"
                    android:hint="@string/description"
                    android:inputType="text|textMultiLine" />

                <Button
                    android:id="@+id/submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="100dp"
                    android:background="@color/f26321"
                    android:text="Submit"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>