<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorWhite"
    android:fillViewport="false">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/header_view"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/header_bg_all_product">
        </View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:letterSpacing="0.1"
            android:text="Products"
            android:textAlignment="gravity"
            android:textAllCaps="true"
            android:textColor="@color/textDark"
            android:textSize="33dp"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="28dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/boostraop_light"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                tools:srcCompat="@mipmap/ic_launcher_foreground"
                android:contentDescription="@string/todo" />

            <LinearLayout
                android:layout_marginRight="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView221"
                        android:layout_width="wrap_content"
                        android:layout_height="46dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginLeft="15dp"

                        android:layout_marginTop="25dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif"
                        android:text="@string/mango_juice"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="101dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginTop="60dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/button"
                            android:layout_width="wrap_content"
                            android:layout_height="70px"
                            android:layout_weight="1"

                            android:background="@color/boostrap_green"
                            android:text="@string/edit"
                            android:textColor="@color/boostraop_light" />

                        <Button
                            android:id="@+id/button71"
                            android:layout_width="wrap_content"
                            android:layout_height="70px"
                            android:layout_weight="1"

                            android:background="@color/boostrap_Danger"
                            android:text="@string/Delete"
                            android:textColor="@color/boostraop_light" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="28dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/boostraop_light"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageVie1w1"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                tools:srcCompat="@mipmap/ic_launcher_foreground"
                android:contentDescription="@string/todo" />

            <LinearLayout
                android:layout_marginRight="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="wrap_content"
                        android:layout_height="46dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginLeft="15dp"

                        android:layout_marginTop="25dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif"
                        android:text="@string/mango_juice"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="101dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginTop="60dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/button3"
                            android:layout_width="wrap_content"
                            android:layout_height="70px"
                            android:layout_weight="1"

                            android:background="@color/boostrap_green"
                            android:text="@string/edit"
                            android:textColor="@color/boostraop_light" />

                        <Button
                            android:id="@+id/button7"
                            android:layout_width="wrap_content"
                            android:layout_height="70px"
                            android:layout_weight="1"

                            android:background="@color/boostrap_Danger"
                            android:text="@string/Delete"
                            android:textColor="@color/boostraop_light" />
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="28dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/boostraop_light"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                tools:srcCompat="@mipmap/ic_launcher_foreground"
                android:contentDescription="@string/todo" />

            <LinearLayout
                android:layout_marginRight="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2422"
                        android:layout_width="wrap_content"
                        android:layout_height="46dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginLeft="15dp"

                        android:layout_marginTop="25dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif"
                        android:text="@string/mango_juice"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="101dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginTop="60dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/button224"
                            android:layout_width="wrap_content"
                            android:layout_height="70px"
                            android:layout_weight="1"

                            android:background="@color/boostrap_green"
                            android:text="@string/edit"
                            android:textColor="@color/boostraop_light" />

                        <Button
                            android:id="@+id/button751"
                            android:layout_width="wrap_content"
                            android:layout_height="70px"
                            android:layout_weight="1"

                            android:background="@color/boostrap_Danger"
                            android:text="@string/Delete"
                            android:textColor="@color/boostraop_light" />
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="28dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/boostraop_light"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/im1ageView1"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                tools:srcCompat="@mipmap/ic_launcher_foreground"
                android:contentDescription="@string/todo" />

            <LinearLayout
                android:layout_marginRight="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/t1extView22"
                        android:layout_width="wrap_content"
                        android:layout_height="46dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginLeft="15dp"

                        android:layout_marginTop="25dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif"
                        android:text="@string/mango_juice"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="101dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginTop="60dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/button111"
                            android:layout_width="wrap_content"
                            android:layout_height="70px"
                            android:layout_weight="1"

                            android:background="@color/boostrap_green"
                            android:text="@string/edit"
                            android:textColor="@color/boostraop_light" />

                        <Button
                            android:id="@+id/button72"
                            android:layout_width="wrap_content"
                            android:layout_height="70px"
                            android:layout_weight="1"

                            android:background="@color/boostrap_Danger"
                            android:text="@string/Delete"
                            android:textColor="@color/boostraop_light" />
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="28dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:background="@color/boostraop_light"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView31"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                tools:srcCompat="@mipmap/ic_launcher_foreground"
                android:contentDescription="@string/todo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView223"
                        android:layout_width="wrap_content"
                        android:layout_height="46dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginLeft="15dp"

                        android:layout_marginTop="25dp"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif"
                        android:text="@string/mango_juice"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="101dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:layout_marginTop="60dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/button4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"

                            android:background="@color/boostrap_green"
                            android:text="@string/edit"
                            android:textColor="@color/boostraop_light" />

                        <Button
                            android:id="@+id/button74"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"

                            android:background="@color/boostrap_Danger"
                            android:text="@string/Delete"
                            android:textColor="@color/boostraop_light" />
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>